Remove unused transaction endpoints
